2012-xx-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.8

  * Corregido copyright
  * Problema con el orden de los migrates

2012-04-06 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.7

  * Los albaranes de proveedores no pasan directamente a facturas
  * Gestión de albaranes de proveedores cerrados
  * Generación del número de factura para ventas
  * Filtros de facturas de proveedores por fecha de vencimiento
  * En los sublistados de albaranes muestra su estado (abierto, cerrado, deposito)
  * Código ISBN mostrado en los sublistados de productos
  * Vinculacion de N albaranes a 1 factura (en modelo de datos)

2012-04-06 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.6

  * Bug en pagos de facturas
  * Forzada anchura en selectores

2012-01-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.5

  * Bug en informes
  * Bug en dimensiones de imagenes
  * Cambios en mensajes de informacion
  * Incluida paginacion para proveedores y clientes
  * Incluida vista xls para proveedores y clientes
  * Evita aviso de pago si la factura tiene importe = 0
  * Validaciones de datos en pagos
  * Permitir pagos negativos (para devoluciones)
  * Fija la posicion del plugin de calendario
  * Corrige descuadre de listados (con overflow de contenido)
  * En el volcado a XLS permite meter los sublistados como hojas
  * Volcado a XLS de sublistados (lineas de albaran)
  * Scheduller de avisos
  * Activada opcion de albaranes perdidos

2011-11-24 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.4

  * Dejamos la barra de menu siempre visible
  * Ordenamos la salida de albaranes en deposito por fecha de devolucion
  * Los descuentos por acumulado se aplican en todos los productos
  * Incluido plugin spreadsheet_on_rails
  * Incluidos helpers para exportacion a xls de listados
  * Caja de avisos
  * Retoques en la info de paginado
  * Esportacion parcial a xls (sin sublistados) para facturas
