@@ -1,7 +1,8 @@
-2012-xx-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.8
+2012-07-01 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.8
 
   * Corregido copyright
   * Problema con el orden de los migrates
+  * Repuesto mensaje de cobro
 
 2012-04-06 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.7
 
